add margin to the bottom of container

--- a/etch-a-sketch.css
+++ b/etch-a-sketch.css
@@ -15,7 +15,8 @@ body {
     height: 520px;
     flex-direction: row;
     justify-content: center;
-    background-color: #ddf6de
+    background-color: #ddf6de;
+    margin-bottom: 50px;
 }
 
 .square {
